--- a/ContactBook-2.0/app/build.gradle
+++ b/ContactBook-2.0/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 25
     buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "cn.contactbook"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
@@ -17,14 +17,30 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dexOptions {
+        incremental true
+        preDexLibraries = false
+    }
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+    compile'com.android.support:appcompat-v7:25.3.1'
+    //compile'com.android.support:recyclerview-v7:23.1.1'
+    compile'com.android.support:design:25.3.1'
     compile 'com.yutianran.maven:super-adapter:1.0.0'
     compile 'me.drakeet.multitype:multitype:3.1.0'
+    compile project(path: ':updater')
+    /* compile ('com.Android.support:appcompat-v7:23.1.1','com.android.support:recyclerview-v7:23.1.1'){
+                    exclude group: "com.Android.support", module: "support-v4"
+                }*/
 }
