--- a/ContactBook-2.0/app/build.gradle
+++ b/ContactBook-2.0/app/build.gradle
@@ -33,18 +33,23 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile'com.android.support:appcompat-v7:25.3.1'
     //compile'com.android.support:recyclerview-v7:23.1.1'
-    compile'com.android.support:design:25.3.1'
-    compile 'com.yutianran.maven:super-adapter:1.0.0'
-    compile 'me.drakeet.multitype:multitype:3.1.0'
     compile project(path: ':updater')
     /* compile ('com.Android.support:appcompat-v7:23.1.1','com.android.support:recyclerview-v7:23.1.1'){
                     exclude group: "com.Android.support", module: "support-v4"
                 }*/
-<<<<<<< HEAD
     compile 'de.hdodenhof:circleimageview:2.1.0'
-=======
->>>>>>> 4667a2d0ee8717b2569167b14eab8f5caa190e5a
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.yutianran.maven:super-adapter:1.0.0'
+    compile 'me.drakeet.multitype:multitype:3.1.0'
+    compile 'com.orhanobut:logger:2.1.1'
+    compile 'com.github.mabbas007:TagsEditText:1.0.5'
+    compile 'com.ashokvarma.android:bottom-navigation-bar:2.0.2'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'org.litepal.android:core:1.6.0'
+    compile 'com.tencent.bugly:crashreport:latest.release'
+    testCompile 'junit:junit:4.12'
 }
