--- a/ContactBook-2.0/app/src/main/AndroidManifest.xml
+++ b/ContactBook-2.0/app/src/main/AndroidManifest.xml
@@ -15,10 +15,16 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <!-- 系统悬浮窗 -->
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
 
     <application
+        android:name="org.litepal.LitePalApplication"
         android:allowBackup="true"
-        android:icon="@drawable/contact"
+        android:icon="@drawable/app"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -33,13 +39,13 @@
             android:name=".androidUI.AddActivity"
             android:launchMode="singleTask">
         </activity>
-        <activity android:name=".androidUI.LookActivity"
+        <activity android:name=".androidUI.DetailActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity android:name=".androidUI.EditActivity">
         </activity>
         <activity
-            android:name=".androidUI.SortedByCompany"
+            android:name=".androidUI.SortedByCompanyActivity"
             android:launchMode="singleTask">
         </activity>
 
